# PDF_translater_to_chainise

./: .gitignore  PDFSPEC.md  pyproject.toml  translate_source.ps1
pdf_translate/: README.md  __init__.py  background.py  cli.py  config.py  extract.py  ocr.py  render.py  translate.py
